--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="">
 
 <head>
+  <title>VinylMe</title>
   <meta charset="utf-8">
   <link rel="icon" href="vinyl.png">
   <link rel="stylesheet" href="css/navigation.css">
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
     html {
       background-color: #f5f2f2;
     }
@@ -48,6 +50,10 @@
     }
     h3 {
       margin-top: 50%;
+      font-family: 'Oswald';
+    }
+    p {
+      font-family: "Berlin Sans FB";
     }
     header {
       position: relative;
@@ -62,7 +68,7 @@
       right: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: 85%;
       background-image: linear-gradient(#49ecd3, #ff8800);
       transform: skewY(-6deg);
       transform-origin: top left;
@@ -89,15 +95,10 @@
     ul {
       font: 14px Verdana, Arial, sans-serif;
       text-align: justify;
-
       /* Обнуляем для родителя*/
       line-height: 0;
-
-      /* Лекарство для IE6-7*/
       text-justify: newspaper;
       zoom:1;
-
-      /* Включаем в работу последнюю строку*/
       text-align-last: justify;
     }
     img {
@@ -114,13 +115,45 @@
     div.demo {
       display: table;
       width: 100%;
-      table-layout: fixed;    /* For cells of equal size */
+      table-layout: fixed;
     }
     div.demo span {
       display: table-cell;
       text-align: center;
     }
-
+    footer {
+      float: right;
+      position: relative;/*относительное позиционирование*/
+      width: 100%;
+      height: 20px;
+      padding: 20px 50px;
+      background: #1a1a1a;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      margin-top: 50px;
+    }
+    footer ul
+    {
+      list-style: none;
+      margin-left: 6%;
+      padding: 0;
+      position: center;
+      text-align: center;
+      transition: 0.5s;/*плавный переход*/
+    }
+    footer ul li {
+      float: left;
+      position: relative;
+    }
+    footer ul li a, footer ul li a:visited {
+      display: block;
+      padding: 0 20px;
+      background: #1a1a1a;
+      color: #ffffff;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
@@ -197,17 +230,12 @@
       </div></span>
     </div>
   </section>
-  <section id="contacts">
-
-  </section>
-
-  <!--<article>
-    <div class="header__bg"></div>
-    <h2 style="font-family: 'Goudy Old Style'">Musical store</h2>
-  </article>
-  <section>
-    <h2>New Arrivals</h2>
-  </section>-->
+  <footer id="contacts">
+    <ul class="social">
+      <li><a href="https://discord.com" target="_blank"><img src="https://www.freepnglogos.com/uploads/discord-logo-png/concours-discord-cartes-voeux-fortnite-france-6.png" width="50"></a> </li>
+      <li><a href="https://twitter.com" target="_blank"><img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png" width="50"></a> </li>
+    </ul>
+  </footer>
 </body>
 
 </html>
