--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     html {
       background-color: #f5f2f2;
     }
+    body {
+      margin: 0;
+    }
     .block {
       display: block;
       position: relative;
